<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_us">Về chúng tôi</string>
    <string name="action_not_available">Điện thoại của bạn không hỗ trợ tính năng này!</string>
    <string name="adbannerId">ca-app-pub-2340782354727602/7779082824</string>
    <string name="add_account_button_label">Add new account</string>
    <string name="add_room">Tìm người ở ghép</string>
    <string name="address_title">Địa chỉ</string>
    <string name="admodAPPID">ca-app-pub-2340782354727602~6875326620</string>
    <string name="adsFullscreenID">ca-app-pub-2340782354727602/6184186740</string>
    <string name="adsVideoID">ca-app-pub-2340782354727602/5554994769</string>
    <string name="air_condition">Điều hoà</string>
    <string name="all">Tất cả</string>
    <string name="anhdaidien">Nhấn vào để chọn ảnh đại diện tin đăng</string>
    <string name="apdung">Áp dụng</string>
    <string name="appID">4330023044312714051</string>
    <string name="app_name">NhaTro360</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applovin_instructions_dialog_title">Instructions</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="appname">Nhà Trọ 360</string>
    <string name="appnapcardbangcamera">App nạp card bằng camera</string>
    <string name="article_title">Bài viết</string>
    <string name="back_post">Quay lại</string>
    <string name="baiviet">Bài viết</string>
    <string name="bancochac">Bạn có chắc chắn muốn xoá tin đăng này?</string>
    <string name="bietthu">Biệt thự</string>
    <string name="book_mark_empty">Bạn chưa lưu bất cứ tin nào.</string>
    <string name="bookmark_title">Đã lưu</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="caidat">Cài đặt</string>
    <string name="callcar">Gọi Xe</string>
    <string name="callphone">Gọi điện</string>
    <string name="camon">Cảm ơn bạn đã sử dụng ứng dụng.Hãy chia sẻ ứng dụng này đến bạn bè và người thân để cùng sử dụng.</string>
    <string name="can_find_location">Không thể tìm được vị trí của bạn.</string>
    <string name="cancel">Huỷ</string>
    <string name="cancel_post_room">Bạn có chắc muốn huỷ tin đăng này?</string>
    <string name="cancel_update_room">Bạn có chắc muốn huỷ tin cập nhật này?</string>
    <string name="canhan">Cá nhân</string>
    <string name="canhomini">Căn hộ mini</string>
    <string name="canhoroom">Căn hộ</string>
    <string name="capnhap">Cập nhật</string>
    <string name="capnhapphong">Cập nhật tin</string>
    <string name="capnhaptaikhoan">Cập nhật tài khoản</string>
    <string name="capnhat">CẬP NHẬT</string>
    <string name="carservices">Gọi xe chuyển đồ</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chiase">Chia sẻ ứng dụng</string>
    <string name="chiaseungdung">Chia sẻ</string>
    <string name="chiduong">Chỉ đường</string>
    <string name="chip_text">Chip text</string>
    <string name="chitiet">Xem Phòng</string>
    <string name="chonanhcandang">Hãy chọn ảnh của phòng cần đăng!</string>
    <string name="chongiaphuhop">Hãy chọn mức giá phù hợp</string>
    <string name="choose_avatar">Chọn ảnh đại diện</string>
    <string name="chothue">Cho Thuê</string>
    <string name="chuacotaikhoan">Chưa có tài khoản? Đăng ký tại đây</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="collection">Phòng tổng hợp</string>
    <string name="res_0x7f130058_com_crashlytics_android_build_id">5386b39a62354877a4778df7033b6893</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="comeback">Quay lại</string>
    <string name="comment_report_application">Gửi góp ý và báo lỗi ứng dụng</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="create_account">Tạo tài khoản</string>
    <string name="dangki">Đăng Kí</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="dangxuat">Đăng xuất</string>
    <string name="email">Email</string>
    <string name="error_street">Vui lòng nhập số nhà, tên đường</string>
    <string name="error_ward">Vui lòng nhập phường, xã</string>
    <string name="gokhuvuc">Tìm quận, thành phố...</string>
    <string name="google">Google</string>
    <string name="hovaten">Họ và Tên</string>
    <string name="khongtimthay">Không tìm thấy kết quả phù hợp.</string>
    <string name="lichsutimkiem">Lịch sử tìm kiếm</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="nhaplaimatkhau">Nhập lại mật khẩu</string>
    <string name="nhatro360">Nhà Trọ 360</string>
    <string name="post_current_location">Vị trí hiện tại</string>
    <string name="post_room">Đăng tin</string>
    <string name="quenmatkhau">Quên mật khẩu?</string>
    <string name="select_country_title">Chọn Tỉnh/TP</string>
    <string name="select_province_hint">Quận/Huyện</string>
    <string name="sodienthoailienlac">Số điện thoại</string>
    <string name="street">Số nhà, tên đường</string>
    <string name="taikhoan">Tài khoản</string>
    <string name="timkiemhome">Tìm kiếm</string>
    <string name="ward">Phường/ Xã</string>
    <string name="favorite">Yêu thích</string>
</resources>