<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".presentation.register.RegisterFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:tint="@color/main"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/create_account"
            android:textColor="@color/main"
            android:textSize="24sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>



    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/main"
        android:textColorHint="@color/main" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hovaten"
        android:inputType="text"
        android:textColor="@color/main"
        android:textColorHint="@color/main" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/sodienthoailienlac"
        android:inputType="text"
        android:textColor="@color/main"
        android:textColorHint="@color/main" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/matkhau"
        android:inputType="textPassword"
        android:textColor="@color/main"
        android:textColorHint="@color/main" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtRePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/nhaplaimatkhau"
        android:inputType="textPassword"
        android:textColor="@color/main"
        android:textColorHint="@color/main" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/main"
        android:text="@string/dangki"
        android:textColor="@color/white" />


</androidx.appcompat.widget.LinearLayoutCompat>