<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.room.RoomFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ef_ic_arrow_back"
        android:tint="@color/main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPrice"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/post_room"
        android:textColor="@color/main"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.shuhart.stepview.StepView
        android:id="@+id/stepView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:sv_selectedCircleColor="@color/main"
        app:sv_selectedTextColor="@color/main"
        app:sv_stepLineWidth="1dp"
        app:sv_stepPadding="4dp"
        app:sv_nextTextColor="@color/main"
        app:sv_nextStepLineColor="@color/main"
        app:sv_doneCircleColor="@color/main"
        app:sv_doneStepLineColor="@color/main"
        app:sv_doneCircleRadius="12dp"
        app:sv_selectedCircleRadius="12dp"
        app:sv_selectedStepNumberColor="@color/colorPrimary"
        app:sv_stepViewStyle="@style/StepView"
        app:sv_doneStepMarkColor="@color/colorPrimary"
        app:sv_stepNumberTextSize="12sp"
        app:sv_animationType="All"
        app:layout_constraintTop_toBottomOf="@id/tvPrice"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llStep1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/stepView"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/select_country_title"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_location_arrow"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCurrentPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginStart="8dp"
                android:textColor="@color/main"
                android:text="@string/post_current_location" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etProvince"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/select_country_title"
            android:padding="8dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/select_province_hint"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etDistrict"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/select_province_hint"
            android:padding="8dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ward"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etWard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/error_ward"
            android:padding="8dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/street"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etStreet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/error_street"
            android:padding="8dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>